--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#spring.devtools.restart.poll-interval=2s
+#spring.devtools.restart.quiet-period=1s
 
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27018
+spring.data.mongodb.database=mongo-rest-api-demo
