feat: save bitcoinprice with timestamp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27018
-spring.data.mongodb.database=mongo-rest-api-demo
+spring.data.mongodb.database=coin-db
