--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27018
 spring.data.mongodb.database=coin-db
+
+
+spring.data.mongodb.connect-timeout=10000
