feat: find coin by timestamp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.data.mongodb.port=27018
 spring.data.mongodb.database=coin-db
 
 
-spring.data.mongodb.connect-timeout=10000
+#spring.data.mongodb.connect-timeout=10000
+#spring.data.mongodb.heartbeat-socket-timeout=20000
+#spring.data.mongodb.heartbeat-connect-timeout=20000
