--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27018
 spring.data.mongodb.database=coin-db
 
+logging.level.org.springframework.data.mongodb.repository.query= debug
 
 #spring.data.mongodb.connect-timeout=10000
 #spring.data.mongodb.heartbeat-socket-timeout=20000
