config: failed docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 #spring.devtools.restart.poll-interval=2s
 #spring.devtools.restart.quiet-period=1s
 
+#spring.data.mongodb.uri=mongodb://mongodb:27019/coin-db
+#mongo.repositories.enabled: true
 
+#spring.data.mongodb.host=db
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27018
 spring.data.mongodb.database=coin-db
